Fix schedule form submission handler - corrected function name - Fixed create-schedule.html form onsubmit to call the correct handleScheduleForm function - Schedule creation should now work properly and save data correctly

--- a/static-site/create-schedule.html
+++ b/static-site/create-schedule.html
@@ -75,7 +75,7 @@
                 <!-- Schedule Form -->
                 <div class="card">
                     <div class="card-body">
-                        <form id="schedule-form" onsubmit="StudyPortal.handleScheduleForm(event)">
+                        <form id="schedule-form" onsubmit="handleScheduleForm(event)">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3">
