CRITICAL FIX: Add shared authentication system to ALL pages ✅ Added auth.js to groups.html - now recognizes logged-in users ✅ Added auth.js to sessions.html - displays user sessions properly ✅ Added auth.js to login.html - improved redirect handling after login ✅ Added auth.js to register.html - consistent authentication flow ✅ Fixed schedule form handler in create-schedule.html ✅ Updated all navigation bars to show user dropdown when logged in ROOT CAUSE FIXED: auth.js was only included in 3 pages, causing: - Other pages not recognizing logged-in users - Data not saving properly (schedules/sessions/groups) - Need to login repeatedly on different pages NOW WORKING: - Authentication persists across ALL pages - Schedule creation saves and displays correctly - No more repeated login requirements - User data properly isolated per user - Navigation shows login status consistently

--- a/static-site/register.html
+++ b/static-site/register.html
@@ -203,6 +203,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="auth.js"></script>
     <script>
         // Handle Registration Form Submission
         document.getElementById('registrationForm').addEventListener('submit', async function(e) {
@@ -330,6 +331,18 @@
             `;
             alertContainer.innerHTML = alertHtml;
         }
+
+        // Initialize page
+        window.addEventListener('DOMContentLoaded', function() {
+            // Initialize auth system
+            authManager.init();
+
+            // Check if already logged in
+            if (authManager.isAuthenticated()) {
+                window.location.href = 'dashboard.html';
+                return;
+            }
+        });
 
         // Real-time password confirmation validation
         document.getElementById('confirmPassword').addEventListener('input', function() {
