--- a/static-site/groups.html
+++ b/static-site/groups.html
@@ -32,7 +32,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="sessions.html">Sessions</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" id="authNav">
                         <a class="nav-link" href="login.html">Login</a>
                     </li>
                 </ul>
@@ -118,6 +118,146 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="auth.js"></script>
     <script src="script.js"></script>
+    <script>
+        // Page-specific authentication and functionality for groups
+        let currentUserGroups = [];
+
+        document.addEventListener('DOMContentLoaded', function() {
+            // Initialize authentication
+            authManager.init();
+
+            // Check if user is logged in
+            if (!authManager.isAuthenticated()) {
+                showLoginRequiredState();
+                return;
+            }
+
+            // User is authenticated, load their data
+            loadUserGroups();
+            showAuthenticatedState();
+        });
+
+        function showLoginRequiredState() {
+            // Login required alert is already shown in HTML by default
+            console.log('User not authenticated - showing login required state');
+        }
+
+        function showAuthenticatedState() {
+            // Hide login required alert and show authenticated content
+            const loginAlert = document.querySelector('.alert-warning');
+            if (loginAlert) {
+                loginAlert.style.display = 'none';
+            }
+
+            // Update page content for authenticated user
+            updateGroupsContent();
+        }
+
+        function loadUserGroups() {
+            // Load groups for the current user
+            currentUserGroups = authManager.loadUserData('userGroups', []);
+            displayGroups();
+        }
+
+        function displayGroups() {
+            const container = document.querySelector('.row:last-child');
+
+            if (currentUserGroups.length === 0) {
+                // Show empty state for authenticated users
+                container.innerHTML = `
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body text-center py-5">
+                                <i class="fas fa-users-plus fa-4x text-primary mb-4"></i>
+                                <h4>Ready to Join Your First Study Group?</h4>
+                                <p class="text-muted mb-4">Connect with other students and enhance your learning experience.</p>
+                                <div class="d-flex justify-content-center gap-3">
+                                    <a href="create-group.html" class="btn btn-primary btn-lg">
+                                        <i class="fas fa-plus me-2"></i>Create Group
+                                    </a>
+                                    <a href="#" class="btn btn-outline-primary btn-lg" onclick="searchGroups()">
+                                        <i class="fas fa-search me-2"></i>Find Groups
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                `;
+            } else {
+                // Display user's groups
+                let groupsHtml = '<div class="col-12"><h4 class="mb-4">My Study Groups</h4></div>';
+                groupsHtml += '<div class="col-12 mb-3"><a href="create-group.html" class="btn btn-primary"><i class="fas fa-plus me-2"></i>Create New Group</a></div>';
+
+                currentUserGroups.forEach(group => {
+                    groupsHtml += `
+                        <div class="col-md-6 col-lg-4 mb-3">
+                            <div class="card group-card h-100">
+                                <div class="card-body">
+                                    <div class="d-flex justify-content-between align-items-start mb-2">
+                                        <h5 class="card-title">${group.name}</h5>
+                                        <span class="badge bg-primary">${group.subject}</span>
+                                    </div>
+                                    <p class="card-text">${group.description || 'No description available'}</p>
+                                    <div class="mb-3">
+                                        <small class="text-muted">
+                                            <i class="fas fa-users me-1"></i>${group.members || 0} members<br>
+                                            <i class="fas fa-calendar me-1"></i>Created: ${formatDate(group.createdAt)}
+                                        </small>
+                                    </div>
+                                    <div class="d-flex justify-content-between">
+                                        <button class="btn btn-sm btn-outline-primary" onclick="viewGroup(${group.id})">
+                                            <i class="fas fa-eye"></i> View
+                                        </button>
+                                        <button class="btn btn-sm btn-outline-danger" onclick="leaveGroup(${group.id})">
+                                            <i class="fas fa-sign-out-alt"></i> Leave
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    `;
+                });
+
+                container.innerHTML = groupsHtml;
+            }
+        }
+
+        function updateGroupsContent() {
+            // Replace the empty state with authenticated user content
+            displayGroups();
+        }
+
+        function formatDate(dateString) {
+            if (!dateString) return 'Unknown';
+            const date = new Date(dateString);
+            return date.toLocaleDateString('en-US', {
+                month: 'short',
+                day: 'numeric',
+                year: 'numeric'
+            });
+        }
+
+        function viewGroup(groupId) {
+            const group = currentUserGroups.find(g => g.id === groupId);
+            if (group) {
+                alert(`Group Details:\nName: ${group.name}\nSubject: ${group.subject}\nDescription: ${group.description || 'None'}\nMembers: ${group.members || 0}`);
+            }
+        }
+
+        function leaveGroup(groupId) {
+            if (confirm('Are you sure you want to leave this group?')) {
+                currentUserGroups = currentUserGroups.filter(g => g.id !== groupId);
+                authManager.saveUserData('userGroups', currentUserGroups);
+                loadUserGroups(); // Reload and refresh display
+                authManager.showAlert('Left group successfully!', 'success');
+            }
+        }
+
+        function searchGroups() {
+            alert('Group search functionality coming soon!');
+        }
+    </script>
 </body>
 </html>
