--- a/static-site/login.html
+++ b/static-site/login.html
@@ -219,6 +219,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="auth.js"></script>
     <script>
         // Handle Login Form Submission
         document.getElementById('loginForm').addEventListener('submit', async function(e) {
@@ -277,7 +278,7 @@
                         const storedPassword = user.password || user.email; // fallback for existing users
 
                         if (loginData.password === storedPassword || loginData.password.length >= 6) {
-                            // Store session data with expiry
+                            // Store session data
                             const sessionData = {
                                 ...user,
                                 loginTime: new Date().toISOString(),
@@ -289,8 +290,14 @@
                             localStorage.setItem('sessionExpiry', (Date.now() + 24 * 60 * 60 * 1000).toString());
 
                             showAlert('Login successful! Welcome back, ' + user.name + '!', 'success');
+
+                            // Check for redirect URL
+                            const redirectUrl = localStorage.getItem('redirectAfterLogin');
+                            const targetUrl = redirectUrl || 'dashboard.html';
+                            localStorage.removeItem('redirectAfterLogin');
+
                             setTimeout(() => {
-                                window.location.href = 'dashboard.html';
+                                window.location.href = targetUrl;
                             }, 1500);
                         } else {
                             showAlert('Invalid email or password. Please check your credentials.', 'danger');
@@ -326,6 +333,15 @@
 
         // Check if user is already logged in
         window.addEventListener('DOMContentLoaded', async function() {
+            // Initialize auth system
+            authManager.init();
+
+            // Check if already logged in
+            if (authManager.isAuthenticated()) {
+                window.location.href = 'dashboard.html';
+                return;
+            }
+
             try {
                 const response = await fetch('/api/auth/session');
                 const result = await response.json();
