Fix authentication system across all pages - Complete global-auth.js with all missing functionality - Fix authentication consistency between pages - Update groups.html and sessions.html to use proper auth system - Hide login alerts when authenticated - Show user-specific content and navigation - Add statistics cards to groups page - Ensure proper initialization on all pages

--- a/static-site/schedules.html
+++ b/static-site/schedules.html
@@ -158,7 +158,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="auth.js"></script>
+    <script src="global-auth.js"></script>
     <script src="script.js"></script>
     <script>
         // Page-specific authentication and functionality
